--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Balqees-401-advanced-javascript/AuthApi/issues"
   },
-  "homepage": "https://github.com/Balqees-401-advanced-javascript/AuthApi#readme"
+  "homepage": "https://github.com/Balqees-401-advanced-javascript/AuthApi#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.18"
+  }
 }
